
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_2__ ;
typedef struct TYPE_6__ TYPE_1__ ;


struct TYPE_7__ {size_t NumberOfSections; } ;
struct TYPE_6__ {scalar_t__ Name; } ;
typedef TYPE_1__* PIMAGE_SECTION_HEADER ;
typedef TYPE_2__* PIMAGE_FILE_HEADER ;


 scalar_t__ strcmp (char*,char*) ;

PIMAGE_SECTION_HEADER
find_rossym_section ( PIMAGE_FILE_HEADER PEFileHeader,
 PIMAGE_SECTION_HEADER PESectionHeaders )
{
 size_t i;
 for ( i = 0; i < PEFileHeader->NumberOfSections; i++ )
 {
  if ( 0 == strcmp ( (char*)PESectionHeaders[i].Name, ".rossym" ) )
   return &PESectionHeaders[i];
 }
 return ((void*)0);
}
